--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,27 @@
 .App {
-  text-align: center;
+width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.section-2{
+display: inline;
+float: left;
+margin-left: 30px;
+margin-top: 30px;
+background-color: purple;
+
+
 }
 
+.activeRoom-header{
+text-align: center;
+}
+
+.section-1{
+display: inline;
+float: left;
+
+
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -29,4 +44,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.messageList-container{
+float: right; 
+
+
+
 }
